--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "barryvdh/laravel-debugbar": "^2.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.4.2",
+        "badcow/lorem-ipsum": "^1.1",
+        "fzaninotto/faker": "^1.5",
+        "vitorbari/image-to-color-palette": "^1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
